<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TabShare</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_even_split">Split Bill Evenly</string>
    <string name="number_payees_input">Enter number of payees</string>
    <string name="subtotal_input">Enter subtotal from bill</string>
    <string name="total_input">Enter final total from bill</string>
    <string name="even_split_button">Split Bill Evenly</string>
    <string name="itemize_button">Split Bill Fairly</string>
    <string name="tip_notification">Tip is usually included for large parties.  If the service was great, why not add a little extra?</string>
    <string name="tip_checkbox">Add Tip</string>
    <string name="title_activity_add_payees">Add Bill Payees</string>
    <string name="add_contact_button">Add</string>
    <string name="name_input">Enter name</string>
    <string name="number_input">Enter phone number (optional)</string>
    <string name="browse_contact_button">Contacts</string>
    <string name="title_activity_even_results">EvenResults</string>
    <string name="clear_payee_list">Clear</string>
    <string name="title_activity_add_items">AddItems</string>
    <string name="name_item_input">Name of Item (Optional)</string>
    <string name="price_item_input">Price</string>
    <string name="quantity_item_input">Quantity</string>
    <string name="add_to_list">Add Item</string>
    <string name="next_button">Next</string>
    <string name="subtotal_display_default">Error: No Subtotal Returned</string>
    <string name="even_subtotal">Subtotal</string>
    <string name="even_tip">Tip</string>
    <string name="even_total">Total</string>
    <string name="zero_decimal">0.00</string>
    <string name="even_5">5%</string>
    <string name="even_10">10%</string>
    <string name="even_15">15%</string>
    <string name="even_round_up">Round Up</string>
    <string name="even_calculate">Calculate</string>
    <string name="itemize_calculate">Recalculate</string>
    <string name="final_total_display_default">Error: No Total Returned</string>
    <string name="continue_to_results">Continue to Results</string>
    <string name="title_activity_itemize">Total and Tip</string>
    <string name="title_activity_results">Final Totals</string>

</resources>
