<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Itemize" 
    android:id="@+id/main_linear">
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center">

	    <TextView
	        android:id="@+id/subtotal_display"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/subtotal_display_default"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:gravity="center" />

	</LinearLayout>
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <EditText
        	android:id="@+id/total_input_itemize"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/total_input"
        	android:inputType="numberDecimal" />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView
	        android:id="@+id/tip_notification_itemize"
	        android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/tip_notification"></TextView>
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
	    <CheckBox
		    android:id="@+id/tip_checkbox_itemize"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/tip_checkbox" />
	</LinearLayout>

	

</LinearLayout>
