<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AddItems" >
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <EditText
        	android:id="@+id/quantity_item_input"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/quantity_item_input"
        	android:inputType="number" />
	    <EditText
        	android:id="@+id/price_item_input"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/price_item_input"
        	android:inputType="numberDecimal"
        	android:focusable="true"/>
	    
</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <EditText
        	android:id="@+id/name_item_input"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/name_item_input"/>

	    
</LinearLayout>
  <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <Button
	        android:id="@+id/add_new_item_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:minHeight="28dp"
	        android:text="@string/add_to_list" />

	</LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal">
    	<ListView
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:gravity="center"
    	    android:id="@+id/item_list"/>
        
    </LinearLayout>
</LinearLayout>