<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".EvenSplit" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name_input"
            android:inputType="textPersonName" />

	</LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/number_input"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/number_input"
            android:inputType="phone" />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        <Button  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"  
	        android:id="@+id/browse_contact_button"  
	        android:text="@string/browse_contact_button"  
	        android:onClick="doLaunchContactPicker"/>
	    <Button  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"  
	        android:id="@+id/add_contact_button"  
	        android:text="@string/add_contact_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal">
    	<ListView
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:gravity="center"
    	    android:id="@+id/payees_list"/>
        
    </LinearLayout>

</LinearLayout>
